# Mandelbrot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Libraries/: CMakeLists.txt
Libraries/include/: Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeLists.txt  FractalCreator.h  Mandelbrot.h  RGB.h  Zoom.h  ZoomList.h
Libraries/src/: Bitmap.cpp  CMakeLists.txt  FractalCreator.cpp  Mandelbrot.cpp  RGB.cpp  ZoomList.cpp
test/: CMakeLists.txt  MandelbrotTest.cpp
